quick fix for modal click away using z-index.

--- a/src/components/list/chatList/addUser/addUser.css
+++ b/src/components/list/chatList/addUser/addUser.css
@@ -9,6 +9,7 @@
 	width: 100vw;
 	background-color: rgba(256, 256, 256, 0.5);
 	backdrop-filter: blur(2px);
+	z-index: 1000;
 
 	.add-user {
 		display: flex;
@@ -18,6 +19,7 @@
 		padding: clamp(10px, 2vw, 20px);
 		background-color: rgba(17, 25, 40, 0.8);
 		border-radius: 0.5rem;
+		z-index: 1001;
 
 		h2 {
 			margin: 0 auto clamp(10px, 2vw, 20px);
